[package]
name = "code_complexity"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
dirs = "4.0.0"
notify = "5.1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
